# tstr

./: .gitignore  CMakeLists.txt  README.md
doc/: rapport.md
img/: plot_impres.m  read.m
include/: README.md
libs/rtaudio-5.1.0/: Makefile  config.status  libtool
libs/rtaudio-5.1.0/doc/: Makefile
libs/rtaudio-5.1.0/tests/: Makefile  apinames  audioprobe  duplex  playraw  playsaw  record  testall  teststops
libs/rtaudio-5.1.0/tests/.deps/: duplex.Po
libs/rtaudio-5.1.0/tests/.libs/: apinames  audioprobe  duplex  playraw  playsaw  record  testall  teststops
ressources/c/: somefunc.cpp
ressources/matlab/: bloc.m  convTemp.m  fconv.m  myconv.m  tconv.m  testReverb.m~  testReverbBloc.m  testReverbOffline.m  testReverbOffline.m~
rtaudio/: Makefile  config.status  libtool
rtaudio/.deps/: librtaudio_la-RtAudio.Plo
rtaudio/.libs/: librtaudio.so.6.0.1
rtaudio/doc/: Makefile
rtaudio/tests/: Makefile  Makefile.am  apinames  audioprobe  duplex  duplex.cpp  duplex_backup.cpp  playraw  playsaw  record  testall  teststops
rtaudio/tests/.libs/: apinames  audioprobe  duplex  playraw  playsaw  record  testall  teststops
rtaudio/tests/autom4te.cache/: requests
src/: README.md  func.cpp  func.h  main.cpp  main_inout.cpp  main_t.cpp  main_t2.cpp  main_timeit.cpp  main_timeit2.cpp  mydef.h  somefunc.cpp  somefunc.h  tests.cpp  utils.cpp  utils.h  utils.tcc
